<resources>
    <string name="app_name">Nanodegree</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <!-- TITLES FOR MAIN BUTTONS -->
    <string name="spotify_button_title">SPOTIFY STREAMER</string>
    <string name="scores_button_title">SCORES APP</string>
    <string name="library_button_title">LIBRARY APP</string>
    <string name="bigger_button_title">BUILD IT BETTER</string>
    <string name="xyz_button_title">XYZ READER</string>
    <string name="my_own_app_button_title">CAPSTONE: MY OWN APP</string>

    <string name="main_title">MY NANODEGREE APPS!</string>
    <string name="title_activity_spotify_streamer">Spotify Streamer</string>


    <!-- Spotify Streamer Access Token -->
    <string name="spotify_access_token">a6d561b259814c2385b9170027c14afa</string>

    <!-- Spotify Streamer strings -->
    <string name="artist_searcher_hint_text">Search</string>
    <string name="title_activity_top_artist_songs">Top Tracks</string>
    <string name="title_activity_spotify_base">SpotifyBaseActivity</string>
    <string name="downloading_title">Searching ...</string>
    <string name="error_text">Not results found</string>
    <string name="title_activity_spotify_player">SpotifyPlayerActivity</string>
</resources>

