<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

<include layout="@layout/toolbar_widget"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/general_margin"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_button_title"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/buttons_padding"
        android:background="@color/primary_dark"
        android:layout_margin="@dimen/buttons_margin"
        android:textColor="@color/white"
        android:onClick="onStartSpotifyStreamer"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores_button_title"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/buttons_padding"
        android:layout_margin="@dimen/buttons_margin"
        android:background="@color/primary_dark"
        android:textColor="@color/white"
        android:onClick="onStartScoresApp"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_button_title"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:background="@color/primary_dark"
        android:padding="@dimen/buttons_padding"
        android:layout_margin="@dimen/buttons_margin"
        android:textColor="@color/white"
        android:onClick="onStartLibraryApp"


        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bigger_button_title"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:background="@color/primary_dark"
        android:padding="@dimen/buttons_padding"
        android:layout_margin="@dimen/buttons_margin"
        android:textColor="@color/white"
        android:onClick="onStartBuildItBetter"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyz_button_title"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:background="@color/primary_dark"
        android:padding="@dimen/buttons_padding"
        android:layout_margin="@dimen/buttons_margin"
        android:textColor="@color/white"
        android:onClick="onStartXYZReader"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_own_app_button_title"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:background="@color/primary_text"
        android:padding="@dimen/buttons_padding"
        android:layout_margin="@dimen/buttons_margin"
        android:textColor="@color/white"
        android:onClick="onStartMyOwnApp"



        />
</LinearLayout>
